# jarvis

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  PUSH_TEST.md  README.md  build.sh  docker-compose.yml  entrypoint.sh  my_script.sh  nginx.conf  ngrok-policy.example.yml  ngrok-policy.yml  ngrok.sh  ngrok.yml  pyproject.toml  requirements.txt  setup_github.sh  test_email.py  update.sh
.cursor/rules/: jarvis-architecture.mdc  jarvis-development.mdc
backend/: requirements.txt
backend/jarvis/: config.py  database.py  main.py  models.py
backend/jarvis/agents/: coding.py
backend/jarvis/api/: auth.py  auth_middleware.py  routes.py  schemas.py  websocket.py
backend/jarvis/budget/: models.py  tracker.py
backend/jarvis/core/: executor.py  loop.py  planner.py  state.py  telegram_listener.py  watchdog.py
backend/jarvis/llm/: base.py  router.py
backend/jarvis/memory/: blob.py  models.py  vector.py  working.py
backend/jarvis/observability/: metrics.py
backend/jarvis/safety/: prompt_builder.py  rules.py  validator.py
backend/jarvis/skills/: jarvis-coding-conventions.md  jarvis-tool-guide.md
backend/jarvis/tools/: base.py  budget_query.py  code_architect.py  code_exec.py  coding_agent.py  coingecko.py  credit_monitor.py  file_ops.py  git_ops.py  gmail_api.py  http_request.py  llm_config.py  memory_ops.py  monitor_tool.py  news_monitor.py  registry.py  resource_manager.py  self_analysis.py  self_modify.py  send_email.py  skills.py  web_browse.py
backend/tests/: conftest.py  test_capabilities.py  test_core_loop.py  test_llm_router.py  test_memory.py  test_safety.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/types/: index.ts
jarvis/: config.py  database.py  main.py  models.py  version.py
jarvis/agents/: _browser_part1.py  browser_agent.py  coding.py
jarvis/api/: auth.py  auth_middleware.py  documentation.md  routes.py  schemas.py
jarvis/budget/: models.py  tracker.py
jarvis/core/: email_listener.py  executor.py  loop.py  planner.py  state.py
jarvis/llm/: router.py
jarvis/memory/: blob.py  vector.py  working.py
jarvis/observability/: logger.py
jarvis/safety/: prompt_builder.py  rules.py
jarvis/skills/: jarvis-architecture.md  jarvis-deployment-verification.md  jarvis-tool-guide.md
jarvis/tests/: test_routes.py
jarvis/tools/: authentication.py  base.py  browser_agent.py  code_exec.py  coding_agent.py  coingecko.py  credit_monitor.py  crypto_trading.py  deployment_guide.md  env_manager.py  file_ops.py  git_ops.py  gmail_api.py  http_request.py  llm_config.py  memory_config.py  memory_ops.py  monitor_tool.py  news_monitor.py  registry.py  resource_manager.py  self_analysis.py  self_modify.py  send_email.py  send_telegram.py  skills.py  web_browse.py  web_search.py
scripts/: pre-commit-eslint.sh  pre-commit-tsc.sh
tests/: conftest.py  test_api_token_update.py  test_budget.py  test_core_loop.py  test_file_ops.py  test_llm_router.py  test_memory.py  test_planner.py  test_safety.py  test_self_analysis.py  test_send_email.py  test_send_telegram.py  test_web_tools.py
(+22 files in other folders)
